# defi-features-data-pipeline

./: .gitignore  Makefile  README.md  pull_request_template.md  pyproject.toml
.github/: release.yml
.github/workflows/: main.yml
config/: graphql_paths.toml  settings.toml
devops/airflow/: requirements-dev.txt
devops/airflow/config/: airflow-variables.json
devops/airflow/dags/: dag_defi_features.py
devops/ecs/: Dockerfile
devops/ecs/infrastructure/: .terraform.lock.hcl  build_and_push_ecr_image.sh  main.tf  variables.tf  versions.tf
notebooks/: ingest_historical_data_into_dl.ipynb
src/pipelines/: utils.py
src/pipelines/analytics/: current_collateral_positions.py  defi_events.py  historical_market_data_and_account_positions.py
src/pipelines/analytics/ddl/: the_graph_historical_market_data_and_account_positions.sql  transpose_borrow_events.sql  transpose_deposit_events.sql  transpose_liquidation_events.sql  transpose_repay_events.sql  transpose_withdraw_events.sql
src/pipelines/analytics/queries/: current_positions_for_address_list.graphql
src/pipelines/analytics/transformations/: transformations.sql
src/pipelines/features/: create_views_with_transformations.py  defi_features.py  defi_features_data_quality_pipeline.py  save_defi_features_datalake.py  save_defi_features_features_db.py
src/pipelines/features/transformations/: view_defi_repay_features.sql  (+10 more)
src/pipelines/raw/: defi_events.py  historical_account_positions.py  historical_market_data.py
src/pipelines/stage/: defi_events.py  historical_account_positions.py  historical_market_data.py
(+11 files in other folders)
